--- a/public/styles/site.scss
+++ b/public/styles/site.scss
@@ -12,7 +12,7 @@
 
 // materialize can be removed entirely by deleting this line.
 
-@import "../../node_modules/materialize-css/sass/materialize";
+@import "materialize/sass/materialize.scss";
 
 
 // Site Styles
