--- a/templates/layouts/default.jade
+++ b/templates/layouts/default.jade
@@ -14,6 +14,7 @@ html
 		link(rel="shortcut icon", href="/favicon.ico", type="image/x-icon")
 		link(href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet")
 		//- Customise the stylesheet for your site by editing /public/styles/site.sass
+		//link(href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css", rel="stylesheet")
 		link(href="/styles/site.css", rel="stylesheet")
 		
 		if user && user.canAccessKeystone
