--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -38,14 +38,8 @@ block content
 		.row
 			.carousel
 				if(happyClients)
-					each hclient in happyClients
-						a.carousel-item(href=hclient.website, title=hclient.title, target="_blank")
-							img(src=hclient._.logo.src(), alt=hclient.title)
-						a.carousel-item(href=hclient.website, title=hclient.title, target="_blank")
-							img(src=hclient._.logo.src(), alt=hclient.title)
-						a.carousel-item(href=hclient.website, title=hclient.title, target="_blank")
-							img(src=hclient._.logo.src(), alt=hclient.title)
-						a.carousel-item(href=hclient.website, title=hclient.title, target="_blank")
+					each hclient, index in happyClients
+						a.carousel-item(href='#img'+ index + '!', title=hclient.title)
 							img(src=hclient._.logo.src(), alt=hclient.title)
 
 block page-js
